15238
The attached code `SharedCounter.scala` works well after compiling and running in a simple Application `CounterTest.scala`.

But starting the Scala-Shell and loading this file results in
```scala
scala> :load SharedCounter.scala
Loading SharedCounter.scala...
<console>:7: error: not found: value SharedCounter
           SharedCounter.increment
           ^
<console>:8: error: not found: value countCalls
           countCalls += 1
           ^
<console>:8: error: reassignment to val
           countCalls += 1
                      ^
<console>:11: error: not found: value SharedCounter
           "Current shared value is "+SharedCounter.value+
                                      ^
defined module SharedCounter
```
Tested with 2.7.7 and 2.8.0 RC1
